# datadog-cli

./: Cargo.toml  README.md
.github/actions/setup-rust-env/: action.yml
src/: events.rs  lib.rs  logs.rs  main.rs  url.rs
